{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "327af3df-9346-4dd8-93eb-a70a34460b15",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "a4133943-843a-42cf-9427-e306170bf908",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "0d79ff90-4e6b-49ab-a75e-7c5f01b6b490",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TimeFreeze",
                    "type": "Button",
                    "id": "668d00f3-fb66-471e-a9df-6186436e5636",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "16709dad-f89d-429c-96cc-adafc60bdb6d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "3c17391b-a192-460e-baa8-d8dbcb87a9a1",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f614eb76-6354-4e04-bf7c-2497a98f492c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "2e6bee13-501a-4595-bbb7-a1f24578c442",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "4effaaeb-be71-475b-9521-a7f99f213d71",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5785031c-3267-40e8-9af0-a055cdc0fea6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "18a58839-93ad-4971-a659-3fff5a7595a3",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a52e4b5f-1592-43ba-bbbe-017996398d42",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TimeFreeze",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d24d2204-f324-4a72-bda1-151a2e93caf4",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "d4795961-e76a-42fa-b6d7-d417918cff6f",
            "actions": [
                {
                    "name": "PauseMenu",
                    "type": "Button",
                    "id": "c70226cb-f146-47b9-9350-cb0d15882b5f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3893157e-ad82-4edf-981c-67609502e605",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Screen",
            "id": "4742aab0-8517-481b-9d08-f6de2842caf1",
            "actions": [
                {
                    "name": "ScreenCapture",
                    "type": "Button",
                    "id": "4a06d0b4-004b-4f70-bb08-e5a12f807c87",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ee37fd58-b293-43d5-b418-7d78041fedc9",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScreenCapture",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}